# FIT_changedetector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  changedetector.py  changedetector.vbs  launch_changedetector.bat  pyproject.toml  requirements-dev.txt  requirements.txt  test_diffs.py  test_parks_b.geojson
.github/workflows/: build-docker-image.yaml  build_installer.yml  test.yaml
installer/: construct.yaml  post_install.bat
qgis_plugin/: __init__.py  add_hash_key_dialog.py  algorithms.py  compare_dialog.py  fit_changedetector_plugin.py  install_dependencies.py  metadata.txt  processing_provider.py  utils.py
src/fit_changedetector/: __init__.py  arcgis.py  arcgis_ToolValidator.py  arcgis_wrapper.py  cli.py  diff.py  gui.py
tests/: test_cli.py  test_diffs.py  test_gui.py
tests/data/: parks_a.geojson  parks_b.geojson  pets_1.csv  pets_2.csv  test_parks_a.geojson  test_parks_b.geojson
